# ClipNest

./: .gitignore  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
debian/: changelog  control  rules
flatpak/: io.github.salihoz0.clipnest.yaml
snap/: snapcraft.yaml
src/: App.tsx  data.ts  styles.css  tauri.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: clipnest.desktop  io.github.salihoz.clipnest.metainfo.xml  io.github.salihoz0.clipnest.metainfo.xml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  paste.rs
