[package]
name = "clipnest"
version = "1.0.0"
description = "Modern clipboard history manager for Linux"
authors = ["Salih Öz <slhozdeveloper@gmail.com>"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "clipnest_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = "3.5"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
uuid = { version = "1.12", features = ["v4", "serde"] }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"

[profile.dev]
opt-level = 1

[profile.release]
panic = "abort"
codegen-units = 16
lto = false
opt-level = "s"
strip = true
